# sem-image--agent-segmentation

./: .gitignore  GITHUB_SETUP_GUIDE.md  LICENSE  README.md  TASKS.md  WALKTHROUGH.md  analyze_grains.py  apply_enhancement.py  apply_rescue.py  config.yaml  evaluate_metrics.py  gridsearch_single_image.py  requirements.txt  score_masks.py  test_one_image.py
Line enhancement/: .gitignore  README.md  gridsearch_single_preprocessing.py  helper_best_param.ipynb  pyproject.toml  remove_info_bar.py  requirements.txt  resize_images.py
Line enhancement/.github/workflows/: cd.yaml  ci.yaml
Line enhancement/sem_line_enhancer/: __init__.py  cli.py  enhancers.py  loader.py  pipeline.py  presets.py
Line enhancement/sem_line_enhancer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/: graph_builder.py  state.py
app/: AGENTIC_APP_GUIDE.md  DEPLOYMENT_GUIDE.md  README.md  UI_CUSTOMIZATION_GUIDE.md  app.py  main.py  requirements.txt  requirements_ai.txt
app/agents/: diagnostic_agent.py
app/utils/: ai_consultant.py  matsam_wrapper.py  metrics.py  visualization.py
core/matsam/: matsam_model.py
core/measurements/: grain_analysis.py
finetuning/: train_sam.py
models/: sam_weights.py
preprocessing/: auto_label.py  remove_info_bar.py  resize_images.py  sync_data.py  tile_images.py  verify_masks.py
