[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sem-line-enhancer"
version = "0.1.0"
description = "SEM line enhancement preprocessing toolkit"
readme = "README.md"
authors = [{ name = "Ali", email = "example@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opencv-python",
    "tifffile",
    "scikit-image",
    "joblib",
    "mlflow",
    "matplotlib",
    "tqdm",
    "streamlit",
    "opencv-python-headless",
    "imagecodecs",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools.packages.find]
include = ["sem_line_enhancer"]
